# Leaf

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  LEAF_DESIGN_GUIDE.md  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  docker-compose.dev.yml  pyproject.toml
backend/app/: OVERVIEW.md  __init__.py  config.py  logger.py  main.py  runtime_config.py
backend/app/api/: OVERVIEW.md
backend/app/database/: OVERVIEW.md  __init__.py
backend/app/dtos/: OVERVIEW.md  database_dtos.py  leaf_dtos.py  sync_dtos.py  trash_dtos.py
backend/app/exceptions/: OVERVIEW.md  exception_handler.py  exceptions.py
backend/app/storage/: OVERVIEW.md  __init__.py  file_storage.py
backend/app/sync/: __init__.py  app_state.py  cloud_detector.py  conflict_store.py  file_to_db.py  file_watcher.py  git_sync.py  github_oauth.py  manifest.py  scheduler.py
backend/data/: .leaf.db-shm  .leaf.db-wal
backend/data/pages/: 032e77c6-adce-4a43-b3b5-4a2ace0bcf3e.md  04555358-30e5-4b8f-9a4b-d01aa91f9202.md  06e6396b-0722-411b-a46b-33dee7f69ce7.md  07583e41-2772-4382-ad69-9ef531026d20.md  08cb597a-9993-465a-b044-c4c386b1eca7.md  11e5785e-e7b2-4e3c-b552-4ede032583f0.md  12eaeaed-d134-44ba-941d-4a7b321a8264.md  147fa36a-8b29-49d4-891a-fa102cd2f7c5.md  1974045e-5856-4054-8aff-6099c0518557.md  1df27048-6438-4b67-8690-22a59f12d9ef.md  26210dfb-fb4c-40bc-b39d-e56f2da29e8e.md  2a2ded77-4cf6-44a9-9a4c-8f6a30905334.md  2addcb9b-46c3-4948-bb76-4326d0e8eadb.md  3d531fd2-bf77-4f7e-a73d-2e9655880b1a.md  4091604f-dada-4953-afe8-809dec824159.md  4a90d2df-34d0-4f45-90c7-ca84c40204e8.md  4b566e8d-abf1-48ea-9038-1c4b7034b883.md  55cc641b-ea6d-479c-8e66-f0fc7a51628d.md  55ec6887-86fa-47c7-9799-ffd314652b21.md  569279b7-35c9-4a79-9201-d1b930817326.md  5db18526-44de-48fe-96fc-8ba0d1e32013.md  5f8aa481-4171-4fc3-bc1c-be7a15f1f718.md  64b3c8e3-2659-497f-9f94-6add25328327.md  65f26292-957f-49ba-b0ca-11a086f32d16.md  6c0324e7-9427-4d19-973f-66290ff80263.md  6e648f65-7be5-4b5f-a60f-28d3d4d01e6e.md  72614716-4cc0-41c4-81b5-2c065a436e99.md  741bde01-aa8c-4ac2-a776-510bf1ce8986.md  74a051ed-3665-4786-8671-cf5c828c24b6.md  82cd1ff0-8b02-49d0-8eef-bcc84e167e0f.md  84bac8ac-0b51-41ae-96e5-9b12bd70de2e.md  93ee441b-e677-4446-b7a5-cc7ff88d6fdb.md  960cb7de-bca4-4045-9ba0-7d2a2678668a.md  9672f1a1-fa74-4437-a71e-ade2ae48aaa4.md  989d19b2-dc79-4bcd-a76e-b1253ff38fbc.md  9bc7ee9f-acb6-4d59-afcc-21d91e8baae7.md  a18cdd09-80c0-4f05-b5c7-85b8d19048fd.md  a9833826-6857-45f8-bcfa-14722b5834d4.md  abc7c845-b430-4d62-8bb0-20385db3aa0e.md  b07faf60-f757-4bb6-a809-f1babfef3386.md  (+21 more)
backend/migrations/versions/: 463f08b6366f_adding_leaf_model.py  7158de42b4ac_adding_type_and_description_to_the_.py  (+8 more)
backend/tests/: test_leaf_database_integration.py
(+180 files in other folders)
