[project]
name = "leaf"
version = "0.1.0"
description = "Leaf API Service"
authors = [
    {name = "Lukas Santing",email = "lukas.santing@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)"
]

[tool.poetry]
name = "leaf"
version = "0.1.0"
description = "Leaf API Service"
authors = ["Lukas Santing <lukas.santing@gmail.com>"]
packages = [{include = "leaf", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
