[project]
name = "leaf"
version = "0.1.0"
description = "Leaf API Service"
authors = [
    {name = "Lukas Santing",email = "lukas.santing@gmail.com"}
]
readme = "README.md"

[tool.poetry]
name = "leaf"
version = "0.1.0"
description = "Leaf API Service"
authors = ["Lukas Santing <lukas.santing@gmail.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
loguru = "^0.7.3"
sqlalchemy = "^2.0.41"
pydantic-settings = "^2.9.1"
pyyaml = "^6.0"
markdownify = "^0.12"
watchdog = "^4.0"
# Lets uvicorn use WatchFilesReload instead of StatReload (avoids OOM from `rglob('*.py')` in Docker + bind mounts).
watchfiles = "^0.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
